--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<!-- header 开始 -->
 	<header>
 		<div class="w">
-			<h1><a href="http://www.moz0.com/#/">moz0</a></h1>
+			<h1><a href="http://www.moz0.com/#!/">moz0</a></h1>
 			<nav>
 				<ul>
-					<li class="page"><a href="#!" class="current">首 页</a></li>
+					<li class="page"><a href="#!/" class="current">首 页</a></li>
 					<li class="page"><a href="#!/recommend">推 荐</a></li>
 					<li class="page"><a href="#!/about">关 于</a></li>
 					<li class="wechat">
