使用gulp完成构建

--- a/release/index.html
+++ b/release/index.html
@@ -6,13 +6,9 @@
 	<meta name="Description" content="你说你那里在下雨，我都不敢问你带没带伞，怕你说没带，而我却没有办法给你送去。-- moz0">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" > -->
 	<title>moz0-杨跃</title>
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<!-- build:css ./public/css/main.css -->
-	<link rel="stylesheet/less" type="text/css" href="public/less/main.less">
-	<!-- endbuild -->
-	<!-- build:remove -->
-	<script src="public/libs/less.js"></script>
-	<!-- endbuild -->
+	<link rel="shortcut icon" href="favicon-7a37d4477a.ico" type="image/x-icon">
+	<link rel="stylesheet" href="./public/css/main-3d203ded23.css">
+	
 </head>
 <body ng-app="moz0">
 	<!-- header 开始 -->
@@ -27,7 +23,7 @@
 					<li class="wechat">
 						<a href="javascript:void(0)">微信公众号</a>
 						<div class="qrcode">
-							<img src="./public/images/qrcode.jpg" alt="">
+							<img src="./public/images/qrcode-c20562b33a.jpg" alt="">
 						</div>
 					</li>
 					<li class="sear">
@@ -74,7 +70,7 @@
 					<use xlink:href="#icon-wechat"></use>
 				</svg>
 				<div class="footer-qrcode">
-					<img src="public/images/qrcode.jpg" alt="">
+					<img src="public/images/qrcode-c20562b33a.jpg" alt="">
 				</div>
 			</div>
 		</div>
@@ -82,16 +78,7 @@
 	<!-- footer 结束 -->
 
 	<script src="./public/fonts/iconfont.js"></script>
-	<!-- build:js ./public/libs/angular.min.js -->
-	<!-- 引入angular和angular-route插件 -->
-	<script src="./bower_components/angular/angular.js"></script>
-	<script src="bower_components/angular-route/angular-route.js"></script>
-	<!-- endbuild -->
-	<!-- build:js ./scripts/app.js -->
-	<!-- angularJS入口 -->
-	<script src="./scripts/app.js"></script>
-	<!-- controller插件 -->
-	<script src="./scripts/controllers.js"></script>
-	<!-- endbuild -->
+	<script src="./public/libs/angular-7918e35ae9.min.js"></script>
+	<script src="./scripts/app-b0a5b3b6f1.js"></script>
 </body>
 </html>
